# jbank

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/application/interfaces/: __init__.py  account_repository.py  event_publisher.py
src/application/use_cases/: __init__.py  create_account.py  deposit_money.py  transfer_money.py  withdraw_money.py
src/domain/entities/: __init__.py  account.py  transaction.py
src/domain/events/: __init__.py  account_events.py  base.py  transfer_events.py
src/domain/value_objects/: __init__.py  account_number.py  cpf.py  money.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/database/: __init__.py  mongo_account_repository.py
src/infrastructure/messaging/: __init__.py  rabbitmq_event_publisher.py  transfer_worker.py
src/presentation/: __init__.py  main.py
src/presentation/api/: dependencies.py
src/presentation/api/routes/: accounts.py  transfers.py
src/presentation/schemas/: __init__.py  account_schemas.py  transfer_schemas.py
src/scripts/: run_worker.py
